--------------------
daneIBE 0.6.3 (5.05.2020)

Udoskonalenia:

- tab2() w trybie tworzenia rodziny rozkładów warunkowych (sumowanie równe
  "kolumny" lub "wiersze") zwraca również kolumnę/wiersz z rozkładame brzegowym
  zmiennej zależnej - etykietę kolumny/wiersza można podać argumentem
  `etykietaOgolem`, albo ustawić jego wartość na NA lub NULL, aby wskazać, że
  zwrócony rozkład ma nie zawierać takiej kolumny/takiego wiersza
  - aby zmniejszyć ryzyko nieporozumień domyślną etykietę kolumny/wiersza sumy
    zmieniono z "ŁĄCZNIE" na "SUMA".

--------------------
daneIBE 0.6.2 (5.05.2020)

Naprawione błędy:

- tab() nie radzi sobie ze zmiennymi tekstowymi ani liczbowymi w ramach obiektów
  tbl_svy, jeśli zawierają braki danych (przyczyna problemu to nieradzenie
  sobie w takiej sytuacji przez funkcję survey_count() z pakietu srvyr - aby
  to obejść, tab() wewnętrznie konwertuje takie zmienne na czynniki).

--------------------
daneIBE 0.6.1 (28.04.2020)

Udoskonalenia:

- obiekty zwracane przez tab2() otrzymały metodę as_tibble(), które zwraca
  tibble, w odróżnieniu od metody as.data.frame(), która zwraca "base'ową"
  ramkę danych - pozwala to uniknąć stosowania kuriozalnej składni z wywołaniem
  as.data.frame() na wynikach wywołania as.data.frame(), żeby uzyskać "base'ową"
  ramkę danych.

Naprawione błędy:
- tab() nie radzi sobie z przywróceniem typu, jaki miały wartości liczbowe
  zmiennej klasy haven_labelled.

--------------------
daneIBE 0.6.0 (19.04.2020)

Nowe funkcje:

- tab2() pozwala tworzyć łączne rozkłady liczebności i łączne rozkłady częstości
  lub rodziny warunkowych rozkładów częstości dwóch zmiennych:
  - posiada metody dla ramek danych i obiektów tbl_svy;
  - wskazywanie kolumn, których rozkład ma zostać obliczony obsługuje
    "tidy evaluation";
  - pozwala uwzględnić ważenie, również w metodzie dla ramki danych;
- metoda as.data.frame dla obiektów zwracanych przez tab2() - pozwala